# endjin-duckdb-examples

./: .gitignore  LICENSE  README.md  behave.ini  pyproject.toml  temp.txt
.devcontainer/: devcontainer.json  post-create.ps1
fabric/Copy Files From Land Registry.DataPipeline/: .platform  pipeline-content.json
fabric/DuckDbExamples.Notebook/: .platform  notebook-content.py
fabric/Ingest NY Taxi Data.DataPipeline/: .platform  pipeline-content.json
fabric/PolarsExamples.Notebook/: .platform  notebook-content.py
fabric/PricePaidData.Lakehouse/: .platform
notebooks/: example_1_land_registry.ipynb  example_2_onelake.ipynb  example_3_ducklake.ipynb  example_3_ducklake_basics.ipynb  example_4_land_registry_ducklake.ipynb  export_notebook.ipynb
notebooks/duckdb_blog/: example_2_onelake.ipynb  example_4_land_registry_ducklake.ipynb
notebooks/sqlbits_2026/: duckdb_demo.ipynb  exploratory_data_analysis.ipynb  using_database_features.ipynb
src/data_importers/: __init__.py  land_registry_importer.py
src/data_wrangler/: __init__.py  data_wrangler.py
tests/bdd/steps/: build_date_dimension_steps.py  common_steps.py  drop_records_without_date_steps.py  drop_rows_with_no_postcode_steps.py  extract_postcode_area_steps.py  extract_postcode_district_steps.py  extract_year_from_date_steps.py  filter_other_type_steps.py  rename_duration_steps.py  rename_old_new_steps.py  rename_property_type_steps.py  run_pipeline_steps.py  sort_by_year_and_property_type_steps.py  summarise_data_steps.py
