[project]
name = "endjin-duckdb-examples"
version = "0.1.0"
description = "Working examples for using DuckDB."
authors = [
    {name = "hello@endjin.com"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "duckdb (>=1.2.2,<2.0.0)",
    "polars (>=1.26.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "plotly[express] (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "azure-storage-file-datalake (>=12.20.0,<13.0.0)",
    "azure-identity (>=1.21.0,<2.0.0)"
]

[tool.poetry]
package-mode = true
packages = [
    { include = "data_importers", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
