[project]
name = "endjin-duckdb-examples"
version = "0.1.0"
description = "Working examples for using DuckDB."
authors = [
    {name = "hello@endjin.com"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb",
    "polars",
    "requests",
    "arrow",
    "ipykernel",
    "pyarrow",
    "plotly[express]",
    "nbformat",
    "azure-storage-file-datalake",
    "azure-identity"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_importers"]
